manifests/webhook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webhook-flask
  name: webhook-flask
  namespace: webhook-flask
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: webhook-flask
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
      creationTimestamp: null
      labels:
        app: webhook-flask
        deploymentconfig: webhook-flask
    spec:
      containers:
      - image: quay.io/carobb/webhook-flask:latest
        imagePullPolicy: Always
        name: webhook-flask
        ports:
        - containerPort: 5000
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
