manifests/webhook-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webhook-flask
  name: webhook-flask
  namespace: webhook-flask
spec:
  ports:
  - name: 5000-tcp
    port: 5000
  selector:
    app: webhook-flask
    deploymentconfig: webhook-flask
